--- a/cv.css
+++ b/cv.css
@@ -32,6 +32,12 @@ h1{
 	margin-top: 10%;
 }
 
+
+.boitedroite h2 {
+	color: lightblue;
+}
+
+
 p{
 	text-align: center;
 }
@@ -89,7 +95,7 @@ p{
 	position: relative;
 	width: 100%;
 	height: 33%;
-	background-color: mediumpurple;
+	background-color: darkgrey;
 	padding-top: 5%;
 	border: 1px solid black;
 }
@@ -99,7 +105,7 @@ p{
 	position: relative;
 	width: 100%;
 	height: 34%;
-	background-color: lightgrey;
+	background-color: darkgrey;
 	padding-top: 5%;
 	border: 1px solid black;
 }
@@ -109,7 +115,7 @@ p{
 	position: relative;
 	width: 100%;
 	height: 33%;
-	background-color: peachpuff;
+	background-color: darkgrey;
 	padding-top: 5%;
 	border: 1px solid black;
 }
